# docassemble-ChangingDivorceOrder

./: MANIFEST.in  pyproject.toml  setup.py
.github/workflows/: alkiln_github_n_you_tests.yml  run_all_tests_GH_server.yml  run_changing_more_than_one_order_tests_GH_server.yml  run_final_order_more_than_15_30_days_tests.yml  run_final_order_within_10_days_tests_GH_server  run_final_order_within_10_days_tests_GH_server.yml  run_final_order_within_15_30_days_tests_GH_server.yml  run_foreign_order_test_GH_server  run_foreign_order_test_GH_server.yml  run_interim_motions_tests_GH_server  run_interim_motions_tests_GH_server.yml  run_modifications_tests_GH_server.yml  run_responding_tests_GH_server.yml  run_unknown_appeal_only_tests_on_GH.yml  run_unknown_date_truefiling_tests_on_GH.yml  run_unknown_final_order_date_tests_GH_server.yml
docassemble/ChangingDivorceOrder/: __init__.py
docassemble/ChangingDivorceOrder/data/questions/: accordion_steps.yml  changing_divorce_order.yml  truefiling.yml
docassemble/ChangingDivorceOrder/data/sources/: changing_more_than_one_order.feature  final_order_more_than_15_30_days.feature  final_order_within_10_days.feature  final_order_within_15_30_days.feature  foreign_order.feature  interim_motions.feature  modifications.feature  responding.feature  unknown_final_order_date.feature  unknown_final_order_date_perms_appeal_only.feature  unknown_final_order_date_permutations.feature
docassemble/ChangingDivorceOrder/data/templates/: changing_divorce_order_action_plan.docx
