[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.ChangingDivorceOrder"
version = "2026.06.04"
description = "A docassemble extension."
readme = "README.md"
authors = [
    { name = "Caroline Robinson", email = "CRobinson@akcourts.gov" },
]
dependencies = [
    "docassemble.AKA2JBranding @ git+https://github.com/A2JatAKCourts/docassemble-AKA2JBranding.git@main",
    "docassemble.AssemblyLine>=4.5.0",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
